Правки, читаемость, оптимизация